tests/chainsaw/restrict-external-ips/bad-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bad-service-external-ips
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 8080
  externalIPs:
  - 192.168.1.100
