tests/chainsaw/restrict-external-ips/good-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: good-service-no-external-ips
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 8080
